--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,15 +28,8 @@
         .tab-content.active { display: block; }
         .chat-msg { animation: fadeIn 0.3s ease; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
-        /* Style for active tab button */
-        .bottom-nav button.active {
-            opacity: 1 !important;
-            color: #22c55e; /* Green for active icon/text */
-            text-shadow: 0 0 8px rgba(34, 197, 94, 0.5);
-        }
-        .bottom-nav button.active span {
-            color: #22c55e;
-        }
+        .bottom-nav button.active { opacity: 1 !important; color: #22c55e; text-shadow: 0 0 8px rgba(34, 197, 94, 0.5); }
+        .bottom-nav button.active span { color: #22c55e; }
     </style>
 </head>
 <body class="pb-20">
@@ -51,9 +45,10 @@
 
     <!-- Content Sections -->
     <main class="p-4">
-
+        
         <!-- HOME TAB -->
         <section id="home" class="tab-content active">
+
             <div class="glass rounded-3xl p-6 mb-6 text-center">
                 <p class="text-xs text-gray-400 uppercase tracking-widest mb-1">Total Balance</p>
                 <h2 id="balance-large" class="text-4xl font-bold mb-4 text-green-400">₱0.000</h2>
@@ -84,7 +79,7 @@
         <section id="chat" class="tab-content">
             <div class="glass rounded-2xl flex flex-col h-[70vh]">
                 <div id="chat-box" class="flex-1 overflow-y-auto p-4 space-y-3">
-                    <!-- Messages here -->
+                    <!-- Messages will be loaded here -->
                 </div>
                 <div class="p-3 border-t border-white/10 bg-black/20">
                     <div id="cooldown-timer" class="text-[10px] text-yellow-500 mb-1 hidden text-center uppercase"></div>
@@ -97,7 +92,7 @@
             </div>
         </section>
 
-        <!-- WITHDRAW TAB -->
+        <!-- BALANCE TAB -->
         <section id="balance-tab" class="tab-content">
             <div class="glass rounded-3xl p-6 mb-6">
                 <h2 class="text-xl font-bold mb-4 text-green-400">Withdraw to GCash</h2>
@@ -116,8 +111,9 @@
         <!-- ADMIN TAB (Hidden) -->
         <section id="admin" class="tab-content">
             <div class="glass rounded-2xl p-4 overflow-x-auto">
+                <h2 class="text-center font-sync text-sm mb-4 text-yellow-500">OWNER
 
-<h2 class="text-center font-sync text-sm mb-4 text-yellow-500">OWNER CONTROL PANEL</h2>
+CONTROL PANEL</h2>
                 <table class="w-full text-[10px] min-w-[300px]">
                     <thead class="bg-white/10">
                         <tr>
@@ -139,7 +135,7 @@
 
     <!-- Bottom Navigation Bar -->
     <nav class="fixed bottom-0 left-0 right-0 glass h-16 flex justify-around items-center border-t border-white/10 z-50 bottom-nav">
-        <button id="nav-home" onclick="switchTab('home', this)" class="flex flex-col items-center gap-1 opacity-50 hover:opacity-100 transition active">
+        <button id="nav-home" onclick="switchTab('home', this)" class="flex flex-col items-center gap-1 opacity-50 hover:opacity-100 transition">
             <span class="text-xl">🏠</span>
             <span class="text-[9px] font-bold">HOME</span>
         </button>
