--- a/index.html
+++ b/index.html
@@ -1,125 +1,130 @@
-
+UnlimAI (GPT | Claude | MidJourney):
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PAPERHOUSE INC ADS</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    
-    <style>
-        :root { --bg-color: #0f172a; }
-        body { background-color: var(--bg-color); color: white; transition: background 0.5s ease; overflow-x: hidden; }
-        .bricks { background-image: radial-gradient(circle at 2px 2px, rgba(255,255,255,0.05) 1px, transparent 0); background-size: 24px 24px; }
-        .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
-        .tab-content { display: none; height: calc(100vh - 140px); overflow-y: auto; }
-        .tab-content.active { display: block; }
-        .reward-popup { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; pointer-events: none; }
-        .nav-active { color: #22d3ee; border-top: 2px solid #22d3ee; }
-        .side-text { position: fixed; left: -30px; top: 50%; transform: rotate(-90deg); opacity: 0.5; font-size: 10px; cursor: pointer; z-index: 100; }
-        .chat-bubble { border-radius: 15px; padding: 8px 12px; margin-bottom: 8px; max-width: 85%; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LUMINA: The Infinite Canvas - Ad & Reward System</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Monetag SDK - Note: 'async' helps load without blocking -->
+    <script src='//libtl.com/sdk.js' data-zone='10337795' data-sdk='show_10337795' async></script>
 </head>
-<body class="bricks p-2">
-
-    <div id="side-trigger" class="side-text italic font-bold" onclick="changeAppTheme()">CLICK TO CHANGE STYLE</div>
-
-    <!-- Top Header -->
-    <div class="glass rounded-2xl p-4 mb-4 flex justify-between items-center sticky top-0 z-50">
-        <div>
-            <h1 class="text-sm font-black text-cyan-400">PAPERHOUSE INC</h1>
-            <p id="tg-name" class="text-[10px] text-gray-400">@username</p>
+<body>
+    <div id="app">
+        <!-- Loading Overlay -->
+        <div id="loading-overlay" class="overlay">
+            <div class="spinner"></div>
+            <p>Loading LUMINA...</p>
         </div>
-        <div class="text-right">
-            <p class="text-[10px] uppercase">Balance</p>
 
-            <p class="text-xl font-bold text-green-400">₱ <span id="balance">0.00</span></p>
+        <!-- Authentication Section -->
+        <div id="auth-section" class="section">
+            <h2>Welcome to LUMINA</h2>
+            <input type="email" id="auth-email" placeholder="Email">
+            <input type="password" id="auth-password" placeholder="Password">
+            <input type="text" id="auth-telegram" placeholder="Telegram Username (e.g., @your_username)">
+            <button id="login-btn">Login</button>
+            <button id="register-btn">Register</button>
+            <p id="auth-message"></p>
+        </div>
+
+        <!-- Main App Section (User Dashboard) -->
+        <div id="main-app-section" class="section hidden">
+            <header>
+                <h1>LUMINA: Your Canvas</h1>
+                <p>Welcome, <span id="display-username"></span>! (<span id="display-telegram"></span>)</p>
+                <button id="logout-btn">Logout</button>
+            </header>
+
+            <div class="user-info">
+                <p>Current Balance: <span id="user-balance">0.000</span> PHP</p>
+                <p>Ads Watched This Week: <span id="ads-watched-count">0</span></p>
+                <button id="show-rewarded-ad-btn" class="action-btn">Watch Ad for 0.012 PHP</button>
+            </div>
+
+            <hr>
+
+            <!-- Leaderboard Section -->
+            <section class="subsection">
+                <h2>👑 Top Lumina Earners (Weekly)</h2>
+                <div class="leaderboard-header">
+                    <p>Resets every: <span id="leaderboard-reset-info"></span></p>
+                </div>
+                <table id="leaderboard-table">
+                    <thead>
+                        <tr>
+                            <th>Rank</th>
+                            <th>User</th>
+                            <th>Total Earned</th>
+                            <th>Ads Watched</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <!-- Leaderboard rows will be inserted here by app.js -->
+                    </tbody>
+                </table>
+            </section>
+
+            <hr>
+
+            <!-- Withdrawal Section -->
+            <section class="subsection">
+                <h2>💰 Request Withdrawal</h2>
+                <input type="text" id="gcash-number" placeholder="GCash Number">
+                <input type="number" id="withdrawal-amount" placeholder="Amount (PHP)" step="0.01">
+                <button id="request-withdrawal-btn" class="action-btn">Request Withdrawal</button>
+                <p id="withdrawal-message"></p>
+            </section>
+
+            <hr>
+
+            <!-- Owner Dashboard Access -->
+            <section class="subsection">
+                <h2>🔑 Owner Dashboard Access</h2>
+                <button id="access-owner-dashboard-btn" class="action-btn">Access Dashboard</button>
+            </section>
+        </div>
+
+        <!-- Owner Dashboard Section -->
+        <div id="owner-dashboard-section" class="section hidden">
+            <header>
+                <h1>Owner Dashboard</h1>
+                <input type="password" id="owner-password-input" placeholder="Owner Password">
+                <button id="owner-login-btn">Login</button>
+                <button id="owner-logout-btn" class="hidden">Back to Main App</button>
+                <p id="owner-message"></p>
+            </header>
+
+            <div id="owner-dashboard-content" class="hidden">
+                <h2>Pending Withdrawal Requests</h2>
+                <table id="withdrawal-requests-table">
+                    <thead>
+                        <tr>
+                            <th>Req ID</th>
+                            <th>User</th>
+                            <th>Telegram</th>
+                            <th>GCash</th>
+                            <th>Amount</th>
+                            <th>Date</th>
+                            <th>Status</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Withdrawal requests will be inserted here by app.js -->
+                    </tbody>
+                </table>
+                <div class="pagination-controls">
+                    <button id="prev-page-btn" disabled>&laquo; Previous</button>
+                    <span id="page-info">Page 1 of 1</span>
+                    <button id="next-page-btn" disabled>Next &raquo;</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Main Container -->
-    <div id="main-app">
-        
-        <!-- HOME (ADS) -->
-        <div id="home" class="tab-content active">
-            <div class="space-y-4">
-                <div class="glass p-6 rounded-3xl text-center border-b-4 border-cyan-500">
-                    <h2 class="text-lg font-bold mb-4">REWARD TERMINAL</h2>
-                    <button onclick="handleAd(1)" id="btnAd1" class="w-full py-4 rounded-2xl bg-gradient-to-r from-cyan-600 to-blue-600 font-bold mb-3 shadow-lg">
-                        Watch Ad 1 (₱0.02) <br><span class="text-[10px] opacity-70" id="t1">Ready</span>
-                    </button>
-                    <button onclick="handleAd(2)" id="btnAd2" class="w-full py-4 rounded-2xl bg-gradient-to-r from-purple-600 to-pink-600 font-bold mb-3">
-                        Watch Ad 2 (₱0.01) <br><span class="text-[10px] opacity-70" id="t2">Ready</span>
-                    </button>
-                    <button onclick="handleAd(3)" id="btnAd3" class="w-full py-4 rounded-2xl bg-gradient-to-r from-orange-600 to-red-600 font-bold">
-                        Watch Ad 3 (₱0.05) <br><span class="text-[10px] opacity-70" id="t3">Ready</span>
-                    </button>
-                </div>
-                <div class="glass p-4 rounded-2xl">
-                    <input type="number" id="gcash" placeholder="GCash Number" class="w-full bg-slate-800 p-3 rounded-xl mb-2 text-sm">
-                    <button onclick="withdraw()" class="w-full bg-green-500 py-3 rounded-xl font-bold">Withdraw (₱1 Min)</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- CHAT -->
-        <div id="chat" class="tab-content">
-            <div class="glass h-full flex flex-col rounded-3xl overflow-hidden">
-                <div id="chat-box" class="flex-1 p-4 overflow-y-auto text-sm"></div>
-                <div id="chat-cooldown" class="text-center text-[10px] text-red-400 hidden">Chat cooldown active...</div>
-                <div class="p-3 glass flex gap-2">
-                    <input type="text" id="msg-input" placeholder="Message..." class="flex-1 bg-transparent outline-none">
-                    <button onclick="sendChatMessage()" class="bg-cyan-500 px-4 py-2 rounded-xl text-xs font-bold">SEND</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- LEADERBOARD -->
-        <div id="leaderboard" class="tab-content">
-            <div class="glass rounded-3xl p-4">
-                <h2 class="text-center font-bold mb-4">🏆 TOP EARNERS (WEEKLY)</h2>
-                <div id="leader-table" class="space-y-2"></div>
-            </div>
-        </div>
-
-        <!-- PROFILE -->
-        <div id="profile" class="tab-content">
-            <div id="profile-view" class="glass rounded-3xl p-6">
-                <!-- Data injected via JS -->
-            </div>
-        </div>
-
-        <!-- ADMIN -->
-        <div id="admin" class="tab-content">
-            <div id="admin-gate" class="glass p-6 rounded-3xl text-center">
-                <input type="password" id="admin-pass" placeholder="Password" class="w-full bg-slate-800 p-3 rounded-xl mb-4">
-                <button onclick="authAdmin()" class="bg-red-500 w-full py-2 rounded-xl">LOGIN</button>
-            </div>
-            <div id="admin-panel" class="hidden glass p-4 rounded-3xl">
-                <h3 class="font-bold border-b border-slate-700 pb-2 mb-2">Withdrawal Requests</h3>
-                <div id="admin-withdrawals"></div>
-            </div>
-        </div>
-
-</div>
-
-    <!-- Navigation -->
-    <div class="fixed bottom-0 left-0 right-0 glass h-20 flex justify-around items-center px-2 rounded-t-3xl border-t border-cyan-900/50">
-        <button onclick="showTab('home')" class="nav-btn flex flex-col items-center text-[10px] font-bold"><span class="text-xl">🏠</span>Home</button>
-        <button onclick="showTab('chat')" class="nav-btn flex flex-col items-center text-[10px] font-bold"><span class="text-xl">💬</span>Chat</button>
-        <button onclick="showTab('leaderboard')" class="nav-btn flex flex-col items-center text-[10px] font-bold"><span class="text-xl">📊</span>Ranks</button>
-        <button onclick="showTab('profile')" class="nav-btn flex flex-col items-center text-[10px] font-bold"><span class="text-xl">👤</span>Profile</button>
-        <button onclick="showTab('admin')" class="nav-btn flex flex-col items-center text-[10px] font-bold text-red-400"><span class="text-xl">🛡️</span>Admin</button>
-    </div>
-
-    <div id="reward-anim-container" class="reward-popup"></div>
-
-    <script src="app.js"></script>
+    <!-- Main App Logic -->
+    <script type="module" src="app.js"></script>
 </body>
 </html>
