--- a/index.html
+++ b/index.html
@@ -3,142 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TG Rewards & Chat</title>
+    <title>TG Rewards App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
             --bg: var(--tg-theme-bg-color, #ffffff);
             --text: var(--tg-theme-text-color, #222222);
             --hint: var(--tg-theme-hint-color, #999999);
             --btn: var(--tg-theme-button-color, #248bcf);
-            --btn-text: var(--tg-theme-button-text-color, #ffffff);
-            --sec-bg: var(--tg-theme-secondary-bg-color, #f4f4f4);
+            --btn-txt: var(--tg-theme-button-text-color, #ffffff);
+            --sec-bg: var(--tg-theme-secondary-bg-color, #f0f0f0);
         }
 
         body {
-            font-family: sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             background-color: var(--bg);
             color: var(--text);
             margin: 0;
             display: flex;
             flex-direction: column;
             height: 100vh;
-            overflow: hidden;
         }
 
-        /* User Profile Header */
-        .header {
-            padding: 15px;
-            background: var(--sec-bg);
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-        #user-name { font-weight: bold; color: var(--btn); }
-
-        /* Ads Area */
-        .ad-slot {
-            margin: 10px;
-            padding: 15px;
-            background: #fffbe6;
-            border: 1px dashed #ffe58f;
-            border-radius: 8px;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        /* Chat Container */
-        #chat-container {
-            flex: 1;
-            overflow-y: auto;
-            padding: 10px;
+        /* Top Bar: Username & Balance */
+        .top-bar {
+            background-color: var(--sec-bg);
+            padding: 12px 16px;
             display: flex;
-            flex-direction: column;
-        }
-
-        .message {
-            background: var(--sec-bg);
-            padding: 8px 12px;
-            border-radius: 12px;
-            margin-bottom: 8px;
-            max-width: 85%;
-            word-wrap: break-word;
-            position: relative;
-        }
-
-        .message .user {
-            font-size: 11px;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid rgba(0,0,0,0.1);
+            font-size: 14px;
             font-weight: bold;
-            color: var(--btn);
-            display: block;
         }
 
-        .message .time {
-            font-size: 9px;
-            color: var(--hint);
-            float: right;
-            margin-top: 5px;
-        }
+        #userBar { color: var(--btn); }
+        #balanceBar { color: #2ecc71; background: rgba(46, 204, 113, 0.1); padding: 4px 10px; border-radius: 12px; }
 
-        /* Pagination Button */
-        #load-more {
-            background: none;
-            border: none;
-            color: var(--btn);
-            font-size: 12px;
-            padding: 10px;
+        /* Ad Section */
+        .ad-unit {
+            padding: 20px;
+            text-align: center;
+            background: linear-gradient(135deg, #6e8efb, #a777e3);
+            color: white;
+            margin: 10px;
+            border-radius: 12px;
             cursor: pointer;
         }
 
+        /* Chat Section */
+        #chat-window {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .msg {
+            background: var(--sec-bg);
+            padding: 8px 12px;
+            border-radius: 12px;
+            max-width: 80%;
+            align-self: flex-start;
+        }
+
+        .msg.me { align-self: flex-end; background: var(--btn); color: var(--btn-txt); }
+        .msg-info { font-size: 10px; opacity: 0.7; display: block; margin-bottom: 4px; }
+
         /* Input Area */
-        .input-area {
+        .input-box {
             padding: 10px;
             display: flex;
-            gap: 10px;
-            background: var(--bg);
-            border-top: 1px solid #ddd;
+            gap: 8px;
+            border-top: 1px solid rgba(0,0,0,0.1);
         }
 
         input {
             flex: 1;
             padding: 10px;
             border-radius: 20px;
-            border: 1px solid #ccc;
-            outline: none;
+            border: 1px solid var(--hint);
+            background: var(--bg);
+            color: var(--text);
         }
 
-        #send-btn {
-            background: var(--btn);
-            color: var(--btn-text);
-            border: none;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-weight: bold;
-        }
+        #sendBtn { background: var(--btn); color: var(--btn-txt); border: none; padding: 0 15px; border-radius: 20px; }
+        #loadMore { font-size: 12px; color: var(--hint); text-align: center; cursor: pointer; padding: 5px; }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        Welcome, <span id="user-name">Loading...</span> 
-        <div style="font-size: 12px; color: var(--hint);">Messages reset every 3 days</div>
+    <div class="top-bar">
+        <div id="userBar">👤 Loading...</div>
+        <div id="balanceBar">💰 0.00</div>
     </div>
 
-    <div class="ad-slot" id="ad-box">
-        <button id="watch-ad-btn" style="border:none; background:none; color:orange; font-weight:bold;">
-            <i class="fas fa-play-circle"></i> Watch Ad for Rewards
-        </button>
+    <div class="ad-unit" id="watchAd">
+        <b>WATCH AD</b><br><small>Earn +50 Coins</small>
     </div>
 
-    <center><button id="load-more">Load Older Messages</button></center>
-    
-    <div id="chat-container">
-        <!-- Messages appear here -->
-    </div>
+    <div id="loadMore">Load older messages</div>
+    <div id="chat-window"></div>
 
-    <div class="input-area">
-        <input type="text" id="msg-input" placeholder="Write a message...">
-        <button id="send-btn">Send</button>
+    <div class="input-box">
+        <input type="text" id="chatInput" placeholder="Message...">
+        <button id="sendBtn">Send</button>
     </div>
 
     <script type="module" src="app.js"></script>
